# tts-audiobook-tool

./: .gitignore  README.md  eslint.config.mjs  filter_spanish_words.py  launch.py  loudness_stats.txt  package-lock.json  package.json  pip_list.txt  project.json  pyproject.toml  pyrightconfig.json  req-main-temp.txt  req-mini-temp.txt  requirements-base.txt  requirements-chatterbox-multi-windows.txt  requirements-chatterbox.txt  requirements-fish-s1.txt  requirements-fish-s2.txt  requirements-fish.txt  requirements-glm.txt  requirements-higgs-v2.txt  requirements-higgs.txt  requirements-indextts2.txt  requirements-mira.txt  requirements-moss.txt  requirements-omnivoice.txt  requirements-oute.txt  requirements-pocket.txt  requirements-qwen3tts.txt  requirements-sgl-omni.txt  requirements-vibevoice.txt  requirements.txt  settings.json  start-chatterbox.bat  temp_items.pickle  temp_timed_segments.pickle  test.m4b  test_cb.py  yamnet_detector.py
.claude/: settings.json
browser_player/: app-util.js  app.js  audio-player-test.html  audio-player.css  audio-player.js  base.css  book-text.js  bookmarks.js  drag-drop-controller.js  header.js  index.html  main.css  main.js  menu.js  metadata-util.js  navigation-panel.js  overlay-manager.js  player-visibility-controller.js  root-attributer.js  show-util.js  sleep-timer.js  storage-controller.js  toast.js  util.js  waves-higgs.abr.m4a  zombie-checker.js
docs/: README.md  abr-metadata-spec.md  abr-section-metadata-plan.md  book-section-architecture-plus.md  browser-player-identity.md  (+16 more)
launcher_markers/sgl_omni/: pyproject.toml
(+470 files in other folders)
