[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-audiobook-tool-sgl-omni-marker"
version = "0.1.0"
description = "Launcher marker package for the tts-audiobook-tool SGL-Omni server mode venv"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
